--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <title>coop menu</title>
 <head>
 <h1>COOP MENU- home menu but chicken</h1>
-<h2>Why, hallo, my dear chicken. What would you like to mess around with today?</h2>
+<h2>Why, hallo, my dear chicken. What would you like to <span>FUCK AROUND WITH</span> today?</h2>
 <head>
 <body>
 <span>CHOOSE A THINGIE</span>
