--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+<link rel="stylesheet" href="styles.css">
 <title>coop menu</title>
 <head>
 <h1>COOP MENU- home menu but chicken</h1>
