--- a/index.html
+++ b/index.html
@@ -3,10 +3,21 @@
 <link rel="stylesheet" href="styles.css">
 <title>coop menu</title>
 <head>
+
 <h1>COOP MENU- home menu but chicken</h1>
-<h2>Why, hallo, my dear chicken. What would you like to <span>FUCK AROUND WITH</span> today?</h2>
+<h2>Why, hallo, my dear chicken. What would you like to
+<br>
+<span>CHICKEN AROUND WITH</span>
+</br>today?
+</h2>
+
 <head>
 <body>
+<br>
 <span>CHOOSE A THINGIE</span>
+<a href="https://diamondstorm-leaderofchickenresistance.github.io/whip/">
+<img src="">
+</a>
+</br>
 </body>
 </html>
