--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <br>
 <span>CHOOSE A THINGIE</span>
 <a href="https://diamondstorm-leaderofchickenresistance.github.io/whip/">
-<img src="">
+<img src="docs/assets/standard belt.jpg" alt="my 1st project- the belt whip thingie">
 </a>
 </br>
 </body>
