--- a/index.html
+++ b/index.html
@@ -18,6 +18,29 @@
 <a href="https://diamondstorm-leaderofchickenresistance.github.io/whip/">
 <img src="docs/assets/standard belt.jpg" alt="my 1st project- the belt whip thingie">
 </a>
+
+<br> 
+<!--dark mode-->
+<button type="button" onclick="darkmode()">Dark-mode?</button>
+<script src="beltwhipthingie.js"></script>
+
+<!--firelight mode-->
+<button type="button" onclick="firelightmode()">Firelight-mode?</button>
+<script src="beltwhipthingie.js"></script>
+
+<!--discord light mode-->
+<button type="button" onclick="discordlightmode()">Discord-light-mode?</button>
+<script src="beltwhipthingie.js.js"></script>
+
+<!--gay mode-->
+<button type="button" onclick="gaymode()">gay-mode?</button>
+<script src="beltwhipthingie.js"></script>
+
+<!--'back in my day in 1969' mode-->
+<button type="button" onclick="backin1969mode()">back in your granparent's days mode?</button>
+<script src="beltwhipthingie.js"></script>
+</br>  
+  
 </br>
 </body>
 </html>
