--- a/index.html
+++ b/index.html
@@ -22,23 +22,23 @@
 <br> 
 <!--dark mode-->
 <button type="button" onclick="darkmode()">Dark-mode?</button>
-<script src="beltwhipthingie.js"></script>
+<script src="js.js"></script>
 
 <!--firelight mode-->
 <button type="button" onclick="firelightmode()">Firelight-mode?</button>
-<script src="beltwhipthingie.js"></script>
+<script src="js.js"></script>
 
 <!--discord light mode-->
 <button type="button" onclick="discordlightmode()">Discord-light-mode?</button>
-<script src="beltwhipthingie.js.js"></script>
+<script src="js.js"></script>
 
 <!--gay mode-->
 <button type="button" onclick="gaymode()">gay-mode?</button>
-<script src="beltwhipthingie.js"></script>
+<script src="js.js"></script>
 
 <!--'back in my day in 1969' mode-->
 <button type="button" onclick="backin1969mode()">back in your granparent's days mode?</button>
-<script src="beltwhipthingie.js"></script>
+<script src="js.js"></script>
 </br>  
   
 </br>
