--- a/index.html
+++ b/index.html
@@ -4,16 +4,16 @@
 <title>coop menu</title>
 <head>
 
-<h1>COOP MENU- home menu but chicken</h1>
-<h2>Why, hallo, my dear chicken. What would you like to
+<h1 id="h1">COOP MENU- home menu but chicken</h1>
+<h2 id="h2">Why, hallo, my dear chicken. What would you like to
 <br>
-<span>CHICKEN AROUND WITH</span>
+<span id="span1">CHICKEN AROUND WITH</span>
 </br>today?
 </h2>
 
 <head>
 <body>
-<span>CHOOSE A THINGIE</span>
+<span id="span2">CHOOSE A THINGIE</span>
 <br>
 <a href="https://diamondstorm-leaderofchickenresistance.github.io/whip/">
 <img src="docs/assets/standard belt.jpg" alt="my 1st project- the belt whip thingie">
