--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </h2>
 
 <head>
-<body>
+<body id="body">
 <span id="span2">CHOOSE A THINGIE</span>
 <br>
 <a href="https://diamondstorm-leaderofchickenresistance.github.io/whip/">
