--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html id="html">
+<html>
 <link rel="stylesheet" href="styles.css">
 <title>coop menu</title>
 <head>
@@ -13,6 +13,7 @@
 
 <head>
 <body id="body">
+<script src="coop.js.js"></script>
 <span id="span2">CHOOSE A THINGIE</span>
 <br>
 <a href="https://diamondstorm-leaderofchickenresistance.github.io/whip/">
