--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <head>
 <body id="body">
-<script src="coop.js.js"></script>
+<script src="coop.js"></script>
 <span id="span2">CHOOSE A THINGIE</span>
 <br>
 <a href="https://diamondstorm-leaderofchickenresistance.github.io/whip/">
