--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </h2>
 
 <head>
-<body id="body">
+<body id="body" onLoad="ChangeBackground">
 <script src="coop.js"></script>
 <span id="span2">CHOOSE A THINGIE</span>
 <br>
