--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<script src="coop.js"></script>
+<script src="javascriptforcoop.js"></script>
 <link rel="stylesheet" href="styles.css">
 <title>coop menu</title>
 <head>
