--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <link rel="stylesheet" href="styles.css">
-<title>coop menu</title>
+<link rel="icon" href="docs/assets/tschika 16by16 icon.png" type="image/x-icon">
+<title>COOOP MENU</title>
 <head>
 
 <h1 id="h1">COOP MENU- home menu but chicken</h1>
