--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <link rel="stylesheet" href="styles.css">
 <link rel="icon" href="docs/assets/tschika 16by16 icon.png" type="image/x-icon">
-<title>COOOP MENU</title>
+<title>COOP MENU</title>
 <head>
 
 <h1 id="h1">COOP MENU- home menu but chicken</h1>
