--- a/index.html
+++ b/index.html
@@ -4,15 +4,16 @@
 <link rel="icon" href="docs/assets/tschika 16by16 icon.png" type="image/x-icon">
 <title>COOP MENU</title>
 <head>
-
+<div>
 <h1 id="h1">COOP MENU- home menu but chicken</h1>
 <h2 id="h2">Why, hallo, my dear chicken. What would you like to
 <br>
 <span id="span1">CHICKEN AROUND WITH</span>
 </br>today?
 </h2>
-
-<head>
+</div>
+</head>
+<div>  
 <body id="body" onload="ChangeBackground()">
 <script src="javascriptforcoop.js"></script>
 
@@ -24,4 +25,5 @@
 </br>
 
 </body>
+</div>
 </html>
