--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
 <a href="https://diamondstorm-leaderofchickenresistance.github.io/whip/">
 <img src="docs/assets/standard belt.jpg" alt="my 1st project- the belt whip thingie">
 </a>
+<a href="https://diamondstorm-leaderofchickenresistance.github.io/cool-sounds/">
+<img src="docs/assets/definition of annoying.png" alt="my 1.5th project- the annoying sound thingie. Before this was included in the belt whip thingie, but not anymore it messed some stuff up">
+</a>
 </br>
 
 </body>
