--- a/index.html
+++ b/index.html
@@ -7,9 +7,8 @@
 <div>
 <h1 id="h1">COOP MENU- home menu but chicken</h1>
 <h2 id="h2">Why, hallo, my dear chicken. What would you like to
-<br>
-<span id="span1">CHICKEN AROUND WITH</span>
-</br>today?
+<br> <span id="span1">CHICKEN AROUND WITH</span> </br>
+today? SCROLL DOWN
 </h2>
 </div>
 </head>
