--- a/index.html
+++ b/index.html
@@ -27,16 +27,17 @@ today? SCROLL DOWN
 
 <br>
 <div class="rating">
-  <input type="radio" id="star5" name="rating" value="5" />
-  <label for="star5"></label>
-  <input type="radio" id="star4" name="rating" value="4" />
-  <label for="star4"></label>
+  <h1 style="font-size: 10; position: relative; top: 390px;">HAYOO! give us a star rating and if u do 1 star, then rest assured, I will be a menace and untie your shoelaces. That includes you, the group of idiots that nagged me to do this. I'll be looking at your responses. And if even 1 of you puts 1 star, then I will untie your shoelaces, take them off your shoes, and never give them back. I am an expert in this proffesion of untying shoelaces and you don't wanna mess with me! AND, SINCE IT'LL BE FUNNY, I'LL THE YOUR LACES TOGETHER IN A CHAIN AND FORCIBLY MAKE YOU GO SKYDIVING OFF THE ROOF WITH THEM AND YOU WILL "ACCIDENTALLY" BE PUSHED OFF IN A WAY THAT YOU BREAK YOUR NECKS AND HAVE TO BE IN A WHEELCHAIR FOR THE REST OF YOUR LIFE AND BE HEALTHY, WITHT THE INTELLIGENCE OF A VEGETABLE! AND YOU DON'T WANT THAT DO YOU! YOU WANT TO BE FAT AND UNHEALTHY LIKE YOU ALREADY ARE! SO DON'T AS ME FOR IT AND GIVE A 1 STAR RATING, YOU DUMB CULT OF H03S!!!!</h1>
+  <input type="radio" id="star5" name="rating" value="1" />
+  <label for="star1"></label>
+  <input type="radio" id="star4" name="rating" value="2" />
+  <label for="star2"></label>
   <input type="radio" id="star3" name="rating" value="3" />
   <label for="star3"></label>
-  <input type="radio" id="star2" name="rating" value="2" />
-  <label for="star2"></label>
-  <input type="radio" id="star1" name="rating" value="1" />
-  <label for="star1"></label>
+  <input type="radio" id="star2" name="rating" value="4" />
+  <label for="star4"></label>
+  <input type="radio" id="star1" name="rating" value="5" />
+  <label for="star5"></label>
 </div>
 </br>
 
