--- a/index.html
+++ b/index.html
@@ -39,6 +39,13 @@ today? SCROLL DOWN
     <label for="rate-2"></label>
     <input type="radio"; namne="rate" id="rate-1">
     <label for="rate-1"></label>
+    <form action="#">
+      <div class="textarea">
+      <textarea colse="30" placeholder="What do you want improven, tschika? (or in other words, what would you like to become insomnious about and work through the whole night, chicken?)"></textarea>
+      </div>
+      <div class="button">
+        <buttone type="submit">Put on da internet</button>
+      </div>
   </div>
 </div>
 </br>
