--- a/index.html
+++ b/index.html
@@ -48,6 +48,17 @@ today? SCROLL DOWN
       </div>
   </div>
 </div>
+<script>
+const button = document.querySelector('button')
+const post = document.querySelector('.post')
+const widget = document.querySelector('.star-widget')
+
+button.onclick = ()=>
+  widget.style.display = 'none';
+  post.style.display = 'block';
+  return false;
+}
+</script>
 </br>
 
 </body>
