--- a/index.html
+++ b/index.html
@@ -22,9 +22,8 @@ today? SCROLL DOWN
 <a href="https://littootschika.github.io/cool-sounds/">
 <img src="docs/assets/definition of annoying.png" alt="my 1.5th project- the annoying sound thingie. Before this was included in the belt whip thingie, but not anymore it messed some stuff up">
 </a>
-<a href="https://littootschika.github.io/tschika-catcher/">
 <img src="docs/assets/tschika-cola.png" alt="MY 1ST JS GAME!!! LETS GOOO!!!">
-</a>
+<input type="text" id="passwordbox" placeholder="password"></input>
 </br>
 </main>
 </body>
