--- a/index.html
+++ b/index.html
@@ -23,7 +23,10 @@ today? SCROLL DOWN
 <img src="docs/assets/definition of annoying.png" alt="my 1.5th project- the annoying sound thingie. Before this was included in the belt whip thingie, but not anymore it messed some stuff up">
 </a>
 <img src="docs/assets/tschika-cola.png" alt="MY 1ST JS GAME!!! LETS GOOO!!!">
+<div id="containerForPasswords">
 <input type="text" id="passwordbox" placeholder="password"></input>
+<button onclick="lockIdiots()">submit password</button>
+</div>
 </br>
 </main>
 </body>
