--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ today? SCROLL DOWN
 <body id="body" onload="ChangeBackground()">
 <script src="javascriptforcoop.js"></script>
 <br>
-<a href="https://diamondstorm-leaderofchickenresistance.github.io/thebeltwhipthingie/">
+<a href="https://littootschika.github.io/thebeltwhipthingie/">
 <img src="docs/assets/standard belt.jpg" alt="my 1st project- the belt whip thingie">
 </a>
 <a href="https://littootschika.github.io/cool-sounds/">
