--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ today? SCROLL DOWN
 <a href="https://littootschika.github.io/cool-sounds/">
 <img src="docs/assets/definition of annoying.png" alt="my 1.5th project- the annoying sound thingie. Before this was included in the belt whip thingie, but not anymore it messed some stuff up">
 </a>
-<img src="docs/assets/tschika-cola.png" alt="MY 1ST JS GAME!!! LETS GOOO!!!">
+<img src="docs/assets/tschika-cola.png" onclick="alert('enter the password for this.\n(hint: it doesn\'t have letters)')" alt="MY 1ST JS GAME!!! LETS GOOO!!!">
 <div id="containerForPasswords">
 <input type="text" id="passwordbox" placeholder="password"></input>
 <button onclick="lockIdiots()">submit password</button>
