--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <h1 id="h1">COOP MENU- home menu but chicken</h1>
 <h2 id="h2">Why, hallo, my dear chicken. What would you like to
 <br> <span id="span1">CHICKEN AROUND WITH</span> </br>
-today? SCROLL DOWN
+today?
 </h2>
 </section>
 </head>
