--- a/index.html
+++ b/index.html
@@ -1,31 +1,31 @@
 <!DOCTYPE html>
 <html>
+<head>
 <link rel="stylesheet" href="styles.css">
+<script src="javascriptforcoop.js"></script>
 <link rel="icon" href="docs/assets/tschika 16by16 icon.png" type="image/x-icon">
 <title>COOP MENU</title>
-<head>
+</head>
+<body id="body" onload="changeBackground()" alt="when it's loaded, the body is supposed to change to differenct backgrounds.">
 <section class="intro">
-<h1 id="h1">COOP MENU- home menu but chicken</h1>
-<h2 id="h2">Why, hallo, my dear chicken. What would you like to
-<br> <span id="span1">CHICKEN AROUND WITH</span> </br>
+<h1 id="h1" alt="COOP MENU- home menu for my websites and projects, but chicken. I hope you liked the pun">COOP MENU- home menu but chicken</h1>
+<h2 id="h2" alt="Unofficial chicken-themed greeting">Why, hallo, my dear chicken. What would you like to
+<br> <span id="span1" alt="another part of the unnoficial chicken-themed greeting, but more clear">CHICKEN AROUND WITH</span> </br>
 today?
 </h2>
 </section>
-</head>
-<main>  
-<body id="body" onload="ChangeBackground()">
-<script src="javascriptforcoop.js"></script>
+<main alt="where most of the stuff goes on">
 <br>
-<a href="https://littootschika.github.io/thebeltwhipthingie/">
-<img src="docs/assets/standard belt.jpg" alt="my 1st project- the belt whip thingie">
+<a href="https://littootschika.github.io/thebeltwhipthingie/" alt="my 1st project- a whip simulator that someone showed me on their phone, so I decided to recreate it on browser">
+<img src="docs/assets/standard belt.jpg" alt="my 1st project- the belt whip thingie. A picture of a belt">
 </a>
-<a href="https://littootschika.github.io/cool-sounds/">
+<a href="https://littootschika.github.io/cool-sounds/" alt="My website got popular in school, so they wanted me to do voice recordings. I had to move them here because they were too irrelevant or stupid.">
 <img src="docs/assets/definition of annoying.png" alt="my 1.5th project- the annoying sound thingie. Before this was included in the belt whip thingie, but not anymore it messed some stuff up">
 </a>
-<img src="docs/assets/tschika-cola.png" onclick="alert('enter the password for this.\n(hint: it doesn\'t have letters)')" alt="MY 1ST JS GAME!!! LETS GOOO!!!">
-<div id="containerForPasswords">
-<input type="text" id="passwordbox" placeholder="password"></input>
-<button onclick="lockIdiots()">submit password</button>
+<img src="docs/assets/tschika-cola.png" onclick="alert('enter the password for this.\n(hint: it doesn\'t have letters)')" alt="MY 1ST JS GAME!!! LETS GOOO!!! it's about catching tschikas (chickens for non-chickenese people)">
+<div id="containerForPasswords" alt="this is where you enter the password">
+<input type="text" id="passwordbox" placeholder="password" alt="it's here, actually"></input>
+<button onclick="lockIdiots()" alt="click this button to submit your password">submit password</button>
 </div>
 </br>
 </main>
