--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ today?
 </a>
 <img src="docs/assets/tschika-cola.png" onclick="alert('enter the password for this.\n(hint: it doesn\'t have letters)')" alt="MY 1ST JS GAME!!! LETS GOOO!!! it's about catching tschikas (chickens for non-chickenese people)">
 <div id="containerForPasswords" alt="this is where you enter the password">
-<input type="text" id="passwordbox" placeholder="password" alt="it's here, actually"></input>
+<input type="text" id="passwordbox" placeholder="password" value="" alt="it's here, actually"></input>
 <button onclick="lockIdiots()" alt="click this button to submit your password">submit password</button>
 </div>
 </br>
