--- a/index.html
+++ b/index.html
@@ -8,11 +8,8 @@
 </head>
 <body id="body" onload="changeBackground()" alt="when it's loaded, the body is supposed to change to differenct backgrounds.">
 <section class="intro">
-<h1 id="h1" alt="COOP MENU- home menu for my websites and projects, but chicken. I hope you liked the pun">COOP MENU- home menu but chicken</h1>
-<h2 id="h2" alt="Unofficial chicken-themed greeting">Why, hallo, my dear chicken. What would you like to
-<br> <span id="span1" alt="another part of the unnoficial chicken-themed greeting, but more clear">CHICKEN AROUND WITH</span> </br>
-today?
-</h2>
+<h1 id="h1" alt="COOP MENU- home menu for my websites and projects, but chicken.">COOP MENU- home menu but chicken</h1>
+<span>INTERNAL COMBUSTION ENGINE</span>
 </section>
 <main alt="where most of the stuff goes on">
 <br>
@@ -28,6 +25,7 @@ today?
 <button onclick="lockIdiots()" alt="click this button to submit your password">submit password</button>
 </div>
 </br>
+<span class="otherClass">it's a beautiful day outside. Birds are singing, flowers are blooming... On days like this, tschikas like you... FAAK YOU!!!</span>
 </main>
 </body>
 </div>
