--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <button onclick="lockIdiots()" alt="click this button to submit your password">submit password</button>
 </div>
 </br>
-<span class="otherClass">it's a beautiful day outside. Birds are singing, flowers are blooming... On days like this, tschikas like you... FAAK YOU!!!</span>
+<span class="otherClass">useful information: random notes around the places where i reside, and also look like i was pressing random buttons on my keyboard are pretty important. *cough* *rooDraCehTnOsinePyMdemmalSi* *cough*</span>
 </main>
 </body>
 </div>
