--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
 <img src="docs/assets/standard belt.jpg" alt="my 1st project- the belt whip thingie. A picture of a belt">
 </a>
 <a href="https://littootschika.github.io/cool-sounds/" alt="My website got popular in school, so they wanted me to do voice recordings. I had to move them here because they were too irrelevant or stupid.">
-<img src="docs/assets/definition of annoying.png" alt="my 1.5th project- the annoying sound thingie. Before this was included in the belt whip thingie, but not anymore it messed some stuff up">
-<h6>i used light mode to make this even more anooying</h6>
+<img style="content: 'i used light mode to make this even more annyoing'" src="docs/assets/definition of annoying.png" alt="my 1.5th project- the annoying sound thingie. Before this was included in the belt whip thingie, but not anymore it messed some stuff up">
 </a>
 <img src="docs/assets/tschika-cola.png" onclick="alert('enter the password for this.\n\nhint: the keys have been left as the upper lowest from the track. You will need to shift your perspective to get it right')" alt="MY 1ST JS GAME!!! LETS GOOO!!! it's about catching tschikas (chickens for non-chickenese people)">
 <div id="containerForPasswords" alt="this is where you enter the password">
