--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body id="body" onload="changeBackground()" alt="when it's loaded, the body is supposed to change to differenct backgrounds.">
 <section class="intro">
 <h1 id="h1" alt="COOP MENU- home menu for my websites and projects, but chicken.">COOP MENU- home menu but chicken</h1>
+<h1>before, the game that i made had a riddle, but i've been noticing that nobody can get it, so you don't need one now.</h1>
 <span>INTERNAL COMBUSTION ENGINE</span>
 </section>
 <main alt="where most of the stuff goes on">
@@ -19,13 +20,15 @@
 <a href="https://littootschika.github.io/cool-sounds/" alt="My website got popular in school, so they wanted me to do voice recordings. I had to move them here because they were too irrelevant or stupid.">
 <img style="content: 'i used light mode to make this even more annyoing'" src="docs/assets/definition of annoying.png" alt="my 1.5th project- the annoying sound thingie. Before this was included in the belt whip thingie, but not anymore it messed some stuff up">
 </a>
-<img src="docs/assets/tschika-cola.png" onclick="alert('enter the password for this.\n\nhint: the keys have been left as the upper lowest from the track. You will need to shift your perspective to get it right')" alt="MY 1ST JS GAME!!! LETS GOOO!!! it's about catching tschikas (chickens for non-chickenese people)">
-<div id="containerForPasswords" alt="this is where you enter the password">
-<input type="text" id="passwordbox" placeholder="password" value="" alt="it's here, actually"></input>
-<button onclick="lockIdiots()" alt="click this button to submit your password">submit password</button>
+<img src="docs/assets/tschika-cola.png" onclick="open('https://littootschika.github.io/tschika-catcher/')//alert('enter the password for this.\n\nhint: the keys have been left as the upper lowest from the track. You will need to shift your perspective to get it right')" alt="MY 1ST JS GAME!!! LETS GOOO!!! it's about catching tschikas (chickens for non-chickenese people)">
+<!-- <div id="containerForPasswords" alt="this is where you enter the password"> -->
+<!-- <input type="text" id="passwordbox" placeholder="password" value="" alt="it's here, actually"></input> -->
+<!-- <button onclick="lockIdiots()" alt="click this button to submit your password">submit password</button> -->
 </div>
 </br>
 <span class="otherClass">useful information: random notes around the places where i reside, and also look like i was pressing random buttons on my keyboard are pretty important. *cough* *rooDraCehTnOsinePyMdemmalSi* *cough* and also, you might have to hover over this to see it clearly</span>
+<br>
+<span class="otherClass">i also plan on doing thing where you find stuff (you will know what stuff is when the time comes) and present it to the person who made it. Hint: it's me. More details will be available later</span>
 </main>
 </body>
 </div>
