--- a/index.html
+++ b/index.html
@@ -20,7 +20,10 @@
 <a href="https://littootschika.github.io/cool-sounds/" alt="My website got popular in school, so they wanted me to do voice recordings. I had to move them here because they were too irrelevant or stupid.">
 <img style="content: 'i used light mode to make this even more annyoing'" src="docs/assets/definition of annoying.png" alt="my 1.5th project- the annoying sound thingie. Before this was included in the belt whip thingie, but not anymore it messed some stuff up">
 </a>
-<img src="docs/assets/tschika-cola.png" onclick="open('https://littootschika.github.io/tschika-catcher/')" alt="MY 1ST JS GAME!!! LETS GOOO!!! it's about catching tschikas (chickens for non-chickenese people)">
+<a href="https://littootschika.github.io/tschika-catcher/" alt="greetings, bitch. mind if i use this text as a place holder? thanks.">
+<img style="content: 'alt="MY 1ST JS GAME!!! LETS GOOO!!! it is about catching tschikas (chickens for non-chickenese people)'" src="docs/assets/tschika-cola.png" alt="no riddle anymore because somehow it was too hard. But i can make another easy one though (as if the 1st one wasnt easy enough)">
+</a>
+<!-- <img src="docs/assets/tschika-cola.png" onclick="open('https://littootschika.github.io/tschika-catcher/')" alt="MY 1ST JS GAME!!! LETS GOOO!!! it's about catching tschikas (chickens for non-chickenese people)"> -->
 <!-- <div id="containerForPasswords" alt="this is where you enter the password"> -->
 <!-- <input type="text" id="passwordbox" placeholder="password" value="" alt="it's here, actually"></input> -->
 <!-- <button onclick="lockIdiots()" alt="click this button to submit your password">submit password</button> -->
