--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
 <a href="https://littootschika.github.io/tschika-catcher/" alt="greetings, bitch. mind if i use this text as a place holder? thanks.">
 <img style="content: 'alt="MY 1ST JS GAME!!! LETS GOOO!!! it is about catching tschikas (chickens for non-chickenese people)'" src="docs/assets/tschika-cola.png" alt="no riddle anymore because somehow it was too hard. But i can make another easy one though (as if the 1st one wasnt easy enough)">
 </a>
+<a href="https://littootschika.github.io/tschika-worm-avacado/" alt="greetings, bitch. mind if i ALSO use this text as a place holder? thanks.">
+<img style="content: 'alt="paper scissors rock, but my verion. TSCHIKA!roshambo'" src="docs/assets/avacado\ dragon\ p2.png">
+</a>
 <!-- <img src="docs/assets/tschika-cola.png" onclick="open('https://littootschika.github.io/tschika-catcher/')" alt="MY 1ST JS GAME!!! LETS GOOO!!! it's about catching tschikas (chickens for non-chickenese people)"> -->
 <!-- <div id="containerForPasswords" alt="this is where you enter the password"> -->
 <!-- <input type="text" id="passwordbox" placeholder="password" value="" alt="it's here, actually"></input> -->
